# playground_opengl

./: CMakeLists.txt  LICENSE  README.md  Rakefile  glad.c  main.cpp
shaders/: simple.frag
